--- a/bootstrapStuff/Bootstrap4/conFusion/css/styles.scss
+++ b/bootstrapStuff/Bootstrap4/conFusion/css/styles.scss
@@ -73,3 +73,13 @@ body{
     bottom: 0px;
     z-index: 1;
 }
+.modal-header{
+    background-color: $background-dark;
+    color: floralwhite;
+    .close{
+        color: $background-pale;
+    }
+}
+.modal-body{
+    background-color: $background-pale;
+}
