--- a/bootstrapStuff/Bootstrap4/conFusion/css/styles.css
+++ b/bootstrapStuff/Bootstrap4/conFusion/css/styles.css
@@ -57,7 +57,7 @@ body {
   background-color: #512DA8;
   color: floralwhite; }
   .modal-header .close {
-    color: #D1C4E9; }
+    color: floralwhite; }
 
 .modal-body {
   background-color: #D1C4E9; }
