--- a/bootstrapStuff/Bootstrap4/conFusion/css/styles.scss
+++ b/bootstrapStuff/Bootstrap4/conFusion/css/styles.scss
@@ -77,7 +77,7 @@ body{
     background-color: $background-dark;
     color: floralwhite;
     .close{
-        color: $background-pale;
+        color: floralwhite;
     }
 }
 .modal-body{
